--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -25,6 +25,38 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  */
 
+.pbox1 {
+  width: 32%;
+  height: 150px;
+  margin-right: 1%;
+  margin-top: 10px;
+  border-radius: 25px;
+  background-color: #0A79EB;
+  color: white;
+  float: left;
+  padding: 15px;
+  padding-top: 4%;
+  color: white !important;
+}
+
+.pbox2 {
+  background-color: #01468E;
+}
+
+.pbox3 {
+  background-color: #0A5393;
+}
+
+.pbox1:hover {
+  background-color: #032140;
+}
+
+.pbox1 .date, .pbox2 .date {
+  font-size: 10px;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
 .bootstrap-switch {
   display: inline-block;
   direction: ltr;
@@ -7070,14 +7102,29 @@ License - nucleoapp.com/license/
   z-index: 2;
 }
 
-/*          Changes for small display      */
+/*=================================================================
+===================================================================
+===================================================================
+                        SMALL DISPLAYS
+===================================================================
+===================================================================
+===================================================================*/
 
 @media (max-width: 767px) {
+  .main {
+    margin-left: 10px;
+  }
+  .pbox1 {
+    width: 85%;
+    margin: 0 20px 10px 20px;
+    height: 110px;
+    font-size: 1.2em;
+  }
   #twitter-widget-0{
     width: 340px !important;
   }
   .page-header{
-    background-position: -45em center;
+    background-position: 1060px center;
   }
   #cd-vertical-nav {
     display: none !important;
