--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -25,6 +25,13 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  */
 
+.text-img {
+  width: 35%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  float: right;
+}
+
 .pbox1 {
   width: 32%;
   height: 150px;
@@ -55,6 +62,7 @@
   font-size: 10px;
   font-weight: bold;
   margin-top: 5px;
+  font-family: sans-serif;
 }
 
 .bootstrap-switch {
@@ -3096,7 +3104,7 @@ select,
 textarea {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Montserrat", "Helvetica", Arial, sans-serif;
+  font-family: "Poppins", "Helvetica", Arial, sans-serif;
   font-weight: 300;
 }
 
@@ -3151,7 +3159,7 @@ h6,
 p {
   font-size: 15px;
   line-height: 1.5em;
-  margin-bottom: 5px;
+  margin-bottom: 1em;
 }
 
 h1 small,
@@ -3198,7 +3206,7 @@ h3 .small {
 .footer-big h5,
 .footer-big h4,
 .media .media-heading {
-  font-family: "Montserrat", "Helvetica", Arial, sans-serif;
+  font-family: "Poppins", "Helvetica", Arial, sans-serif;
 }
 
 .title,
@@ -3324,7 +3332,7 @@ body {
   color: #66615b;
   font-size: 14px;
   font-weight: 300;
-  font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+  font-family: 'Poppins', "Helvetica", Arial, sans-serif;
 }
 
 a {
@@ -3406,7 +3414,7 @@ input[type="file"]>input[type="button"]::-moz-focus-inner {
 }
 
 .fa {
-  width: 18px;
+  width: 30px;
   text-align: center;
 }
 
@@ -3608,7 +3616,7 @@ License - nucleoapp.com/license/
 
 @font-face {
   font-family: 'nucleo-icons';
-  src: url("../fonts/nucleo-icons.eot");
+  src: url("../fonts/nucleo-icons");
   src: url("../fonts/nucleo-icons.eot") format("embedded-opentype"), url("../fonts/nucleo-icons.woff2") format("woff2"), url("../fonts/nucleo-icons.woff") format("woff"), url("../fonts/nucleo-icons.ttf") format("truetype"), url("../fonts/nucleo-icons.svg") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -4527,7 +4535,7 @@ License - nucleoapp.com/license/
 .navbar .navbar-nav .nav-item .nav-link {
   line-height: 1.6;
   margin: 15px 3px;
-  padding: 10px 15px;
+  padding: 10px 10px;
   opacity: .8;
   font-size: 12px;
   text-transform: uppercase;
@@ -4581,7 +4589,7 @@ License - nucleoapp.com/license/
 }
 
 .navbar .navbar-collapse:after {
-  background-color: #FFFCF5;
+  background-color: #01468E;
 }
 
 .navbar #navbarSupportedContent .nav-item {
@@ -6931,7 +6939,7 @@ License - nucleoapp.com/license/
 }
 
 .section {
-  padding: 70px 0;
+  padding: 55px 0;
   position: relative;
   background-color: #FFFFFF;
 }
@@ -7111,12 +7119,15 @@ License - nucleoapp.com/license/
 ===================================================================*/
 
 @media (max-width: 767px) {
+  .text-img {
+    display: none;
+  }
   .main {
-    margin-left: 10px;
+    margin: 0 15px;
   }
   .pbox1 {
-    width: 85%;
-    margin: 0 20px 10px 20px;
+    width: 95%;
+    margin: 5px auto;
     height: 110px;
     font-size: 1.2em;
   }
@@ -7751,7 +7762,7 @@ License - nucleoapp.com/license/
   }
   .navbar-collapse .navbar-nav>.nav-item>.nav-link {
     margin: 0px 0px;
-    color: #9A9A9A !important;
+    color: #FFF !important;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 12px;
