--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -24,6 +24,12 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
+#lista5 {
+  position: absolute;
+  right: 20%;
+  bottom: 1em;
+  height: 150px;
+}
 
 .text-img {
   width: 35%;
@@ -32,17 +38,28 @@
   float: right;
 }
 
+.pressImg {
+  height: 120px;
+  width: 100%;
+  background-size: cover;
+}
+
+.pbox1 p {
+  margin: 1em auto;
+  width: 90%;
+  font-size: 1em;
+}
+
 .pbox1 {
   width: 32%;
-  height: 150px;
+  height: 250px;
   margin-right: 1%;
   margin-top: 10px;
-  border-radius: 25px;
+  border-radius: 5px;
   background-color: #0A79EB;
   color: white;
   float: left;
-  padding: 15px;
-  padding-top: 4%;
+  padding: 0 0 15px 0;
   color: white !important;
 }
 
@@ -7122,13 +7139,16 @@ License - nucleoapp.com/license/
   .text-img {
     display: none;
   }
+  #lista5 {
+    right: 10px;
+  }
   .main {
     margin: 0 15px;
   }
   .pbox1 {
     width: 95%;
     margin: 5px auto;
-    height: 110px;
+    height: 230px;
     font-size: 1.2em;
   }
   #twitter-widget-0{
