--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -611,10 +611,13 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 400px & max-width: 768px) {
   .col-md-8 {
     flex: 0 0 95% !important;
     max-width: 95% !important;
+  }
+  .offset-md-2 {
+    margin-left: 10%;
   }
 }
 
@@ -3649,7 +3652,7 @@ License - nucleoapp.com/license/
 }
 
 /*------------------------
-	base class definition
+  base class definition
 -------------------------*/
 
 .nc-icon {
@@ -3822,7 +3825,7 @@ License - nucleoapp.com/license/
 }
 
 /*------------------------
-	font icons
+  font icons
 -------------------------*/
 
 .nc-air-baloon::before {
