--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -28,9 +28,9 @@
 
 #lista5 {
   position: absolute;
-  right: 20%;
-  bottom: 1em;
-  height: 150px;
+  right: 5%;
+  bottom: 3em;
+  height: 120px;
 }
 
 .text-img {
@@ -611,13 +611,16 @@
   }
 }
 
-@media only screen and (max-width: 768px) and (min-width: 400px){
+@media (max-width: 768px) {
   .col-md-8 {
     flex: 0 0 95% !important;
     max-width: 95% !important;
   }
   .offset-md-2 {
     margin-left: 10%;
+  }
+  #top1 {
+    background-image: url('./assets/img/banner-mob.jpg') !important;
   }
 }
 
@@ -6995,12 +6998,7 @@ License - nucleoapp.com/license/
 }
 
 .section-dark-blue {
-  background: #1279E6;
-  background: -moz-linear-gradient(top, #1279E6 35%, #000 100%);
-  background: -webkit-linear-gradient(top, #1279E6 35%, #000 100%);
-  background: -ms-linear-gradient(top, #1279E6 35%, #000 100%);
-  background: linear-gradient(to bottom, #1279E6 35%, #000 100%);
-  color: #FFFFFF;
+  background: #010638;
 }
 
 .section-dark {
@@ -7146,7 +7144,8 @@ License - nucleoapp.com/license/
     display: none;
   }
   #lista5 {
-    right: 10px;
+    width: 90%;
+    height: auto;
   }
   .main {
     margin: 0 15px;
