--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -25,6 +25,10 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  */
 
+  #top1 {
+    background-image: url('./assets/img/banner.jpg');
+  }
+
 #lista5 {
   position: absolute;
   right: 5%;
@@ -619,7 +623,7 @@
     margin-left: 10%;
   }
   #top1 {
-    background-image: url('./assets/img/banner-mob.jpg');
+    background-image: url('./assets/img/banner-mob.jpg') !important;
   }
 }
 
