--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -26,7 +26,7 @@
  */
 
   #top1 {
-    background-image: url('./assets/img/banner.jpg');
+    background-image: url('../img/banner.jpg');
   }
 
 #lista5 {
@@ -614,7 +614,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 450px) and (max-width: 768px) {
   .col-md-8 {
     flex: 0 0 95% !important;
     max-width: 95% !important;
@@ -622,8 +622,11 @@
   .offset-md-2 {
     margin-left: 10%;
   }
-  #top1 {
-    background-image: url('./assets/img/banner-mob.jpg') !important;
+}
+
+@media (max-width: 768px) {
+    #top1 {
+    background-image: url('../img/banner-mob.jpg') !important;
   }
 }
 
