--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -611,16 +611,6 @@
   }
 }
 
-@media (min-width: 450px) and (max-width: 768px) {
-  .col-md-8 {
-    flex: 0 0 95% !important;
-    max-width: 95% !important;
-  }
-  .offset-md-2 {
-    margin-left: 10%;
-  }
-}
-
 @media (max-width: 768px) {
     #top1 {
     background-image: url('../img/banner-mob.jpg');
@@ -8320,3 +8310,13 @@ License - nucleoapp.com/license/
   }
 }
 
+
+@media screen and (min-width: 450px) and (max-width: 1024px) {
+  .col-md-8 {
+    flex: 0 0 95%;
+    max-width: 95%;
+  }
+  .offset-md-2 {
+    margin-left: 10%;
+  }
+}
