--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -8291,7 +8291,7 @@ License - nucleoapp.com/license/
       background-position: 1200px 830px;
   }
   .agenda-banner {
-      background-position: 500px 5px;
+      background-position: 0 85px;
   }
 }
 
