--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -7802,7 +7802,7 @@ License - nucleoapp.com/license/
   }
   .navbar-collapse .navbar-nav>.nav-item>.nav-link:hover,
   .navbar-collapse .navbar-nav>.nav-item>.nav-link:active {
-    color: #403D39 !important;
+    color: #FFF !important;
   }
   .navbar-collapse::after {
     top: 0;
