--- a/assets/css/paper-kit.css
+++ b/assets/css/paper-kit.css
@@ -34,12 +34,17 @@
   display: none;
 }
 
+span.date {
+  font-size: 2rem;
+}
+
 span.tdtitle {
   font-weight: bold !important;
 }
 
 .a-date {
-  width: 21%;
+  width: 20%;
+  text-align: center;
 }
 
 .text-img {
