--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,24 @@ span.tdtitle {
   font-family: sans-serif;
 }
 
+.carousel {
+  width: 100%;
+}
+
+.photobut {
+  border: 1px solid;
+  border-radius: 5px;
+  float: left;
+  font-size: 10px;
+  margin-top: 4em;
+  padding: 5px;
+}
+
+.photobut:hover {
+  background-color: #51bcda;
+  color: white;
+}
+
 table tr td:first-child {
   font-weight: bold;
   width: 75px;
@@ -198,6 +216,15 @@ table tr td:first-child {
 @media (max-width: 375px) {
   .page-header {
       background-position: center center;
+  }
+  .carousel {
+    margin-top: 8em;
+  }
+  .footer-nav {
+    text-align: center;
+  }
+  .photobut {
+    margin-top: 3.5em;
   }
 }
 
